JDK 7u79, JDK 7u80, JDK 8u45 released
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@3414 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/releases.html
+++ b/www/releases.html
@@ -84,6 +84,12 @@
                             </td>
 
                             <td>
+                                <div><b>JDK 8 Update 45</b><br><small style="margin-left: 10px;">Released: Apr 14th, 2015, <a href="http://www.oracle.com/technetwork/java/javase/8u45-relnotes-2494160.html">Release Notes</a></small></div>
+                                <hr>
+                                <div><b>JDK 7 Update 80</b><br><small style="margin-left: 10px;">Released: Apr 14th, 2015, <a href="http://www.oracle.com/technetwork/java/javase/7u80-relnotes-2494162.html">Release Notes</a></small></div>
+                                <hr>
+                                <div><b>JDK 7 Update 79</b><br><small style="margin-left: 10px;">Released: Apr 14th, 2015, <a href="http://www.oracle.com/technetwork/java/javase/7u79-relnotes-2494161.html">Release Notes</a></small></div>
+                                <hr>
                                 <div><b>JDK 8 Update 40</b><br><small style="margin-left: 10px;">Released: Mar 3rd, 2015, <a href="http://www.oracle.com/technetwork/java/javase/8u40-relnotes-2389089.html">Release Notes</a></small></div>
                             </td>
                         </tr>
