link to Korean documentation changed
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@3428 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/ko_KR/gettingstarted.html
+++ b/www/ko_KR/gettingstarted.html
@@ -39,7 +39,7 @@
 
     <p>애플리케이션에 대한 데이터를 보거나 저장하기 위해 Applications창을 다루는 방법을 좀더 알기 위해서는 다음 페이지를 보자. </p>
     <ul>
-        <li><a href="http://openframework.or.kr/framework_reference/visualvm/ko_KR/applications_window.html">Applications 창 사용</a></li>
+        <li><a href="http://ldg.pe.kr/framework_reference/visualvm/ko_KR/applications_window.html">Applications 창 사용</a></li>
     </ul>
 
     <h3>힙 덤프 살펴보기</h3>
@@ -67,7 +67,7 @@
 
     <p>좀더 세부적인 정보를 보기 위해서는 아래 문서를 보라. </p>
     <ul>
-        <li><a href="http://openframework.or.kr/framework_reference/visualvm/ko_KR/heapdump.html">햅덤프 살펴보기</a></li>
+        <li><a href="http://ldg.pe.kr/framework_reference/visualvm/ko_KR/heapdump.html">햅덤프 살펴보기</a></li>
     </ul>
 
     <h3>애플리케이션 프로파일링</h3>
@@ -89,7 +89,7 @@
 
     <p>VisualVM을 사용한 프로파일링에 대해 좀더 많은 것을 알고 싶다면 다음 문서를 보라. </p>
     <ul>
-        <li><a href="http://openframework.or.kr/framework_reference/visualvm/ko_KR/profiler.html">애플리케이션 프로파일링</a></li>
+        <li><a href="http://ldg.pe.kr/framework_reference/visualvm/ko_KR/profiler.html">애플리케이션 프로파일링</a></li>
     </ul>
 
     <h3>원격 호스트에 연결</h3>
@@ -114,7 +114,7 @@
 
     <p>좀더 많은 정보를 보고 싶다면 아래 문서를 보라.</p>
     <ul>
-        <li><a href="http://openframework.or.kr/framework_reference/visualvm/ko_KR/applications_remote.html">원격 애플리케이션을 사용</a></li>
+        <li><a href="http://ldg.pe.kr/framework_reference/visualvm/ko_KR/applications_remote.html">원격 애플리케이션을 사용</a></li>
     </ul>
 
     <h3>VisualVM 플러그인 설치</h3>
@@ -134,7 +134,7 @@
             VisualVM은 로컬과 원격 JVM에 실행되는 자바 애플리케이션의 정보를 쉽게 찾아보기 위한 시각적인 인터페이스로 디자인되었다. 
             VisualVM기능에 대한 좀더 상세한 정보는 보기 위해서는 아래의 문서를 보라.</p>
     <ul>
-        <li><a href="http://openframework.or.kr/framework_reference/visualvm/ko_KR/docindex.html">VisualVM 문서와 관련 자료들</a>.</li>
+        <li><a href="http://ldg.pe.kr/framework_reference/visualvm/ko_KR/docindex.html">VisualVM 문서와 관련 자료들</a>.</li>
     </ul>
   </body>
 </html>
