--- a/www/ko_KR/intro.html
+++ b/www/ko_KR/intro.html
@@ -44,11 +44,11 @@
 
     <p>데이터를 보거나 저장하기 위해 Applications창을 사용하는 방법에 대해 좀더 세부적으로 알고 싶다면, 다음 페이지들을 보면 된다. </p>
     <ul>
-        <li><a href="http://openframework.or.kr/framework_reference/visualvm/ko_KR/applications_window.html">Applications 창 사용</a></li>
-        <li><a href="http://openframework.or.kr/framework_reference/visualvm/ko_KR/applications_local.html">로컬 애플리케이션을 다루기</a></li>
-        <li><a href="http://openframework.or.kr/framework_reference/visualvm/ko_KR/applications_remote.html">원격 애플리케이션 다루기</a></li>
-        <li><a href="http://openframework.or.kr/framework_reference/visualvm/ko_KR/coredumps.html">가상머신(VM) 코어덤프 다루기</a></li>
-        <li><a href="http://openframework.or.kr/framework_reference/visualvm/ko_KR/snapshots.html">스냅샷 다루기</a></li>
+        <li><a href="http://ldg.pe.kr/framework_reference/visualvm/ko_KR/applications_window.html">Applications 창 사용</a></li>
+        <li><a href="http://ldg.pe.kr/framework_reference/visualvm/ko_KR/applications_local.html">로컬 애플리케이션을 다루기</a></li>
+        <li><a href="http://ldg.pe.kr/framework_reference/visualvm/ko_KR/applications_remote.html">원격 애플리케이션 다루기</a></li>
+        <li><a href="http://ldg.pe.kr/framework_reference/visualvm/ko_KR/coredumps.html">가상머신(VM) 코어덤프 다루기</a></li>
+        <li><a href="http://ldg.pe.kr/framework_reference/visualvm/ko_KR/snapshots.html">스냅샷 다루기</a></li>
     </ul>
 
     <h3>메인창</h3>
@@ -58,12 +58,12 @@
 
     <p>메인창에 표시되는 애플리케이션 데이터의 세부적인 정보는 다음 페이지에서 하나씩 살펴볼 수 있다. </p>
     <ul>
-        <li><a href="http://openframework.or.kr/framework_reference/visualvm/ko_KR/overview_tab.html">애플리케이션 Overview(개요) 탭</a></li>
-        <li><a href="http://openframework.or.kr/framework_reference/visualvm/ko_KR/monitor_tab.html">Monitor탭에서 애플리케이션 모니터링</a></li>
-        <li><a href="http://openframework.or.kr/framework_reference/visualvm/ko_KR/threads.html">Threads탭에서 쓰레드 모니터링</a></li>
-        <li><a href="http://openframework.or.kr/framework_reference/visualvm/ko_KR/heapdump.html">힙덤프 살펴보기</a></li>
-        <li><a href="http://openframework.or.kr/framework_reference/visualvm/ko_KR/profiler.html">Profiler탭에서 애플리케이션 프로파일링</a> (로컬 애플리케이션만 해당됨)</li>
-        <li><a href="http://openframework.or.kr/framework_reference/visualvm/ko_KR/mbeans_tab.html">MBeans 탭</a> (MBeans 플러그인이 필요함)</li>
+        <li><a href="http://ldg.pe.kr/framework_reference/visualvm/ko_KR/overview_tab.html">애플리케이션 Overview(개요) 탭</a></li>
+        <li><a href="http://ldg.pe.kr/framework_reference/visualvm/ko_KR/monitor_tab.html">Monitor탭에서 애플리케이션 모니터링</a></li>
+        <li><a href="http://ldg.pe.kr/framework_reference/visualvm/ko_KR/threads.html">Threads탭에서 쓰레드 모니터링</a></li>
+        <li><a href="http://ldg.pe.kr/framework_reference/visualvm/ko_KR/heapdump.html">힙덤프 살펴보기</a></li>
+        <li><a href="http://ldg.pe.kr/framework_reference/visualvm/ko_KR/profiler.html">Profiler탭에서 애플리케이션 프로파일링</a> (로컬 애플리케이션만 해당됨)</li>
+        <li><a href="http://ldg.pe.kr/framework_reference/visualvm/ko_KR/mbeans_tab.html">MBeans 탭</a> (MBeans 플러그인이 필요함)</li>
     </ul>
 
 
@@ -71,7 +71,7 @@
     <p>VisualVM 플러그인 센터에서 플러그인을 설치하기 위해 플러그인 관리자(Plugins창)를 사용해서 기능을 추가할 수 있다. 
             업데이트(update) 센터에 추가할 수 있는 자신만의 플러그인을 개발해서 VisualVM의 기능을 확장할 수도 있다. </p>
 
-    <p>예를 들어, VisualVM의 MBean플러그인을 설치하면 애플리케이션 탭에 <a href="http://openframework.or.kr/framework_reference/visualvm/ko_KR/mbeans_tab.html">MBeans 탭</a>을 추가하게 된다. 
+    <p>예를 들어, VisualVM의 MBean플러그인을 설치하면 애플리케이션 탭에 <a href="http://ldg.pe.kr/framework_reference/visualvm/ko_KR/mbeans_tab.html">MBeans 탭</a>을 추가하게 된다. 
             MBean플러그인은 VisualVM에 MBean을 모니터링하고 관리하는 기능을 추가해준다. </p>
     <p><b>VisualVM 플러그인 설치</b></p>
     <ol>
@@ -89,6 +89,6 @@
         <li><a href="../api-quickstart.html">VisualVM 확장</a></li>
     </ul>
     <hr />
-    <p><a href="http://openframework.or.kr/framework_reference/visualvm/ko_KR/docindex.html">VisualVM 문서 인덱스 페이지로 이동</a></p>
+    <p><a href="http://ldg.pe.kr/framework_reference/visualvm/ko_KR/docindex.html">VisualVM 문서 인덱스 페이지로 이동</a></p>
   </body>
 </html>
