--- a/www/releases.html
+++ b/www/releases.html
@@ -84,6 +84,28 @@
                             </td>
 
                             <td>
+                                <div><b>JDK 8 Update 92</b><br><small style="margin-left: 10px;">Released: Apr 19th, 2016, <a href="http://www.oracle.com/technetwork/java/javase/8u92-relnotes-2949471.html">Release Notes</a></small></div>
+                                <hr>
+                                <div><b>JDK 8 Update 91</b><br><small style="margin-left: 10px;">Released: Apr 19th, 2016, <a href="http://www.oracle.com/technetwork/java/javase/8u91-relnotes-2949462.html">Release Notes</a></small></div>
+                                <hr>
+                                <div><b>JDK 8 Update 77</b><br><small style="margin-left: 10px;">Released: Mar 23th, 2016, <a href="http://www.oracle.com/technetwork/java/javase/8u77-relnotes-2944725.html">Release Notes</a></small></div>
+                                <hr>
+                                <div><b>JDK 8 Update 74</b><br><small style="margin-left: 10px;">Released: Feb 3rd, 2016, <a href="http://www.oracle.com/technetwork/java/javase/8u74-relnotes-2879024.html">Release Notes</a></small></div>
+                                <hr>
+                                <div><b>JDK 8 Update 73</b><br><small style="margin-left: 10px;">Released: Feb 3rd, 2016, <a href="http://www.oracle.com/technetwork/java/javase/8u73-relnotes-2874654.html">Release Notes</a></small></div>
+                                <hr>
+                                <div><b>JDK 8 Update 72</b><br><small style="margin-left: 10px;">Released: Jan 19th, 2016, <a href="http://www.oracle.com/technetwork/java/javase/8u72-relnotes-2775802.html">Release Notes</a></small></div>
+                                <hr>
+                                <div><b>JDK 8 Update 71</b><br><small style="margin-left: 10px;">Released: Jan 19th, 2016, <a href="http://www.oracle.com/technetwork/java/javase/8u71-relnotes-2773756.html">Release Notes</a></small></div>
+                                <hr>
+                                <div><b>JDK 8 Update 66</b><br><small style="margin-left: 10px;">Released: Nov 16th, 2015, <a href="http://www.oracle.com/technetwork/java/javase/8u66-relnotes-2692847.html">Release Notes</a></small></div>
+                                <hr>
+                                <div><b>JDK 8 Update 65</b><br><small style="margin-left: 10px;">Released: Oct 20th, 2015, <a href="http://www.oracle.com/technetwork/java/javase/8u65-relnotes-2687063.html">Release Notes</a></small></div>
+                                <hr>
+                                <div><b>JDK 8 Update 60</b><br><small style="margin-left: 10px;">Released: Aug 18th, 2015, <a href="http://www.oracle.com/technetwork/java/javase/8u60-relnotes-2620227.html">Release Notes</a></small></div>
+                                <hr>
+                                <div><b>JDK 8 Update 51</b><br><small style="margin-left: 10px;">Released: Jul 14th, 2015, <a href="http://www.oracle.com/technetwork/java/javase/8u51-relnotes-2587590.html">Release Notes</a></small></div>
+                                <hr>
                                 <div><b>JDK 8 Update 45</b><br><small style="margin-left: 10px;">Released: Apr 14th, 2015, <a href="http://www.oracle.com/technetwork/java/javase/8u45-relnotes-2494160.html">Release Notes</a></small></div>
                                 <hr>
                                 <div><b>JDK 7 Update 80</b><br><small style="margin-left: 10px;">Released: Apr 14th, 2015, <a href="http://www.oracle.com/technetwork/java/javase/7u80-relnotes-2494162.html">Release Notes</a></small></div>
