--- a/www/pluginscenters.html
+++ b/www/pluginscenters.html
@@ -108,6 +108,16 @@
 
                             <tr>
                                 <td class="release">
+                                    <div><b>VisualVM 1.3.8</b></div>
+                                </td>
+
+                                <td class="plugincenter">
+                                    <div><small><a href="http://www.netbeans.info/uc/show_uc_content.php?ucurl=http://bits.netbeans.org/VisualVM/uc/release138/updates.xml">http://visualvm.java.net/uc/release138/updates.xml.gz</a></small></div>
+                                </td>
+                            </tr>
+
+                            <tr>
+                                <td class="release">
                                     <div><b>VisualVM 1.3.7</b></div>
                                 </td>
 
@@ -259,7 +269,53 @@
 
                             <tr>
                                 <td class="release">
-                                    <div><b>JDK 7 Update 6 ~ 21</b></div>
+                                    <div><b>JDK 8 Update 40 - 45</b></div>
+                                    <hr>
+                                    <div><b>JDK 7 Update 79 - 80</b></div>
+                                </td>
+
+                                <td class="plugincenter">
+                                    <div><small><a href="http://www.netbeans.info/uc/show_uc_content.php?ucurl=http://bits.netbeans.org/VisualVM/uc/8u40/updates.xml">http://visualvm.java.net/uc/8u40/updates.xml.gz</a></small></div>
+                                </td>
+                            </tr>
+
+                            <tr>
+                                <td class="release">
+                                    <div><b>JDK 8 Update 20 - 25</b></div>
+                                </td>
+
+                                <td class="plugincenter">
+                                    <div><small><a href="http://www.netbeans.info/uc/show_uc_content.php?ucurl=http://bits.netbeans.org/VisualVM/uc/8u20/updates.xml">http://visualvm.java.net/uc/8u20/updates.xml.gz</a></small></div>
+                                </td>
+                            </tr>
+
+                            <tr>
+                                <td class="release">
+                                    <div><b>JDK 8 Update 5</b></div>
+                                    <hr>
+                                    <div><b>JDK 8</b></div>
+                                    <hr>
+                                    <div><b>JDK 7 Update 60 - 76</b></div>
+                                </td>
+
+                                <td class="plugincenter">
+                                    <div><small><a href="http://www.netbeans.info/uc/show_uc_content.php?ucurl=http://bits.netbeans.org/VisualVM/uc/7u60/updates.xml">http://visualvm.java.net/uc/7u60/updates.xml.gz</a></small></div>
+                                </td>
+                            </tr>
+
+                            <tr>
+                                <td class="release">
+                                    <div><b>JDK 7 Update 40 ~ 55</b></div>
+                                </td>
+
+                                <td class="plugincenter">
+                                    <div><small><a href="http://www.netbeans.info/uc/show_uc_content.php?ucurl=http://bits.netbeans.org/VisualVM/uc/7u14/updates.xml">http://visualvm.java.net/uc/7u14/updates.xml.gz</a></small></div>
+                                </td>
+                            </tr>
+
+                            <tr>
+                                <td class="release">
+                                    <div><b>JDK 7 Update 6 ~ 25</b></div>
                                 </td>
 
                                 <td class="plugincenter">
