www.netbeans.info -> services.netbeans.org
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@3452 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/pluginscenters.html
+++ b/www/pluginscenters.html
@@ -112,7 +112,7 @@
                                 </td>
 
                                 <td class="plugincenter">
-                                    <div><small><a href="http://www.netbeans.info/uc/show_uc_content.php?ucurl=http://bits.netbeans.org/VisualVM/uc/release138/updates.xml">http://visualvm.java.net/uc/release138/updates.xml.gz</a></small></div>
+                                    <div><small><a href="http://services.netbeans.org/uc/show_uc_content.php?ucurl=http://bits.netbeans.org/VisualVM/uc/release138/updates.xml">http://visualvm.java.net/uc/release138/updates.xml.gz</a></small></div>
                                 </td>
                             </tr>
 
@@ -122,7 +122,7 @@
                                 </td>
 
                                 <td class="plugincenter">
-                                    <div><small><a href="http://www.netbeans.info/uc/show_uc_content.php?ucurl=http://bits.netbeans.org/VisualVM/uc/release137/updates.xml">http://visualvm.java.net/uc/release137/updates.xml.gz</a></small></div>
+                                    <div><small><a href="http://services.netbeans.org/uc/show_uc_content.php?ucurl=http://bits.netbeans.org/VisualVM/uc/release137/updates.xml">http://visualvm.java.net/uc/release137/updates.xml.gz</a></small></div>
                                 </td>
                             </tr>
 
@@ -132,7 +132,7 @@
                                 </td>
 
                                 <td class="plugincenter">
-                                    <div><small><a href="http://www.netbeans.info/uc/show_uc_content.php?ucurl=http://bits.netbeans.org/VisualVM/uc/release136/updates.xml">http://visualvm.java.net/uc/release136/updates.xml.gz</a></small></div>
+                                    <div><small><a href="http://services.netbeans.org/uc/show_uc_content.php?ucurl=http://bits.netbeans.org/VisualVM/uc/release136/updates.xml">http://visualvm.java.net/uc/release136/updates.xml.gz</a></small></div>
                                 </td>
                             </tr>
 
@@ -142,7 +142,7 @@
                                 </td>
 
                                 <td class="plugincenter">
-                                    <div><small><a href="http://www.netbeans.info/uc/show_uc_content.php?ucurl=http://bits.netbeans.org/VisualVM/uc/release135/updates.xml">http://visualvm.java.net/uc/release135/updates.xml.gz</a></small></div>
+                                    <div><small><a href="http://services.netbeans.org/uc/show_uc_content.php?ucurl=http://bits.netbeans.org/VisualVM/uc/release135/updates.xml">http://visualvm.java.net/uc/release135/updates.xml.gz</a></small></div>
                                 </td>
                             </tr>
 
@@ -152,7 +152,7 @@
                                 </td>
 
                                 <td class="plugincenter">
-                                    <div><small><a href="http://www.netbeans.info/uc/show_uc_content.php?ucurl=http://bits.netbeans.org/VisualVM/uc/release134/updates.xml">http://visualvm.java.net/uc/release134/updates.xml.gz</a></small></div>
+                                    <div><small><a href="http://services.netbeans.org/uc/show_uc_content.php?ucurl=http://bits.netbeans.org/VisualVM/uc/release134/updates.xml">http://visualvm.java.net/uc/release134/updates.xml.gz</a></small></div>
                                 </td>
                             </tr>
 
@@ -162,7 +162,7 @@
                                 </td>
 
                                 <td class="plugincenter">
-                                    <div><small><a href="http://www.netbeans.info/uc/show_uc_content.php?ucurl=http://bits.netbeans.org/VisualVM/uc/release133/updates.xml">http://visualvm.java.net/uc/release133/updates.xml.gz</a></small></div>
+                                    <div><small><a href="http://services.netbeans.org/uc/show_uc_content.php?ucurl=http://bits.netbeans.org/VisualVM/uc/release133/updates.xml">http://visualvm.java.net/uc/release133/updates.xml.gz</a></small></div>
                                 </td>
                             </tr>
 
@@ -172,7 +172,7 @@
                                 </td>
 
                                 <td class="plugincenter">
-                                    <div><small><a href="http://www.netbeans.info/uc/show_uc_content.php?ucurl=http://bits.netbeans.org/VisualVM/uc/release132/updates.xml">http://visualvm.java.net/uc/release132/updates.xml.gz</a></small></div>
+                                    <div><small><a href="http://services.netbeans.org/uc/show_uc_content.php?ucurl=http://bits.netbeans.org/VisualVM/uc/release132/updates.xml">http://visualvm.java.net/uc/release132/updates.xml.gz</a></small></div>
                                 </td>
                             </tr>
 
@@ -182,7 +182,7 @@
                                 </td>
 
                                 <td class="plugincenter">
-                                    <div><small><a href="http://www.netbeans.info/uc/show_uc_content.php?ucurl=http://bits.netbeans.org/VisualVM/uc/release131/updates.xml">http://visualvm.java.net/uc/release131/updates.xml.gz</a></small></div>
+                                    <div><small><a href="http://services.netbeans.org/uc/show_uc_content.php?ucurl=http://bits.netbeans.org/VisualVM/uc/release131/updates.xml">http://visualvm.java.net/uc/release131/updates.xml.gz</a></small></div>
                                 </td>
                             </tr>
 
@@ -192,7 +192,7 @@
                                 </td>
 
                                 <td class="plugincenter">
-                                    <div><small><a href="http://www.netbeans.info/uc/show_uc_content.php?ucurl=http://bits.netbeans.org/VisualVM/uc/release13/updates.xml">http://visualvm.java.net/uc/release13/updates.xml.gz</a></small></div>
+                                    <div><small><a href="http://services.netbeans.org/uc/show_uc_content.php?ucurl=http://bits.netbeans.org/VisualVM/uc/release13/updates.xml">http://visualvm.java.net/uc/release13/updates.xml.gz</a></small></div>
                                 </td>
                             </tr>
 
@@ -202,7 +202,7 @@
                                 </td>
 
                                 <td class="plugincenter">
-                                    <div><small><a href="http://www.netbeans.info/uc/show_uc_content.php?ucurl=http://bits.netbeans.org/VisualVM/uc/release122/updates.xml">http://visualvm.java.net/uc/release122/updates.xml.gz</a></small></div>
+                                    <div><small><a href="http://services.netbeans.org/uc/show_uc_content.php?ucurl=http://bits.netbeans.org/VisualVM/uc/release122/updates.xml">http://visualvm.java.net/uc/release122/updates.xml.gz</a></small></div>
                                 </td>
                             </tr>
 
@@ -214,7 +214,7 @@
                                 </td>
 
                                 <td class="plugincenter">
-                                    <div><small><a href="http://www.netbeans.info/uc/show_uc_content.php?ucurl=http://bits.netbeans.org/VisualVM/uc/release12/updates.xml">http://visualvm.java.net/uc/release12/updates.xml.gz</a></small></div>
+                                    <div><small><a href="http://services.netbeans.org/uc/show_uc_content.php?ucurl=http://bits.netbeans.org/VisualVM/uc/release12/updates.xml">http://visualvm.java.net/uc/release12/updates.xml.gz</a></small></div>
                                 </td>
                             </tr>
 
@@ -224,7 +224,7 @@
                                 </td>
 
                                 <td class="plugincenter">
-                                    <div><small><a href="http://www.netbeans.info/uc/show_uc_content.php?ucurl=http://bits.netbeans.org/VisualVM/uc/release111/updates.xml">http://visualvm.java.net/uc/release111/updates.xml.gz</a></small></div>
+                                    <div><small><a href="http://services.netbeans.org/uc/show_uc_content.php?ucurl=http://bits.netbeans.org/VisualVM/uc/release111/updates.xml">http://visualvm.java.net/uc/release111/updates.xml.gz</a></small></div>
                                 </td>
                             </tr>
 
@@ -234,7 +234,7 @@
                                 </td>
 
                                 <td class="plugincenter">
-                                    <div><small><a href="http://www.netbeans.info/uc/show_uc_content.php?ucurl=http://bits.netbeans.org/VisualVM/uc/release11/updates.xml">http://visualvm.java.net/uc/release11/updates.xml.gz</a></small></div>
+                                    <div><small><a href="http://services.netbeans.org/uc/show_uc_content.php?ucurl=http://bits.netbeans.org/VisualVM/uc/release11/updates.xml">http://visualvm.java.net/uc/release11/updates.xml.gz</a></small></div>
                                 </td>
                             </tr>
 
@@ -244,7 +244,7 @@
                                 </td>
 
                                 <td class="plugincenter">
-                                    <div><small><a href="http://www.netbeans.info/uc/show_uc_content.php?ucurl=http://bits.netbeans.org/VisualVM/uc/release101/updates.xml">http://visualvm.java.net/uc/release101/updates.xml.gz</a></small></div>
+                                    <div><small><a href="http://services.netbeans.org/uc/show_uc_content.php?ucurl=http://bits.netbeans.org/VisualVM/uc/release101/updates.xml">http://visualvm.java.net/uc/release101/updates.xml.gz</a></small></div>
                                 </td>
                             </tr>
 
@@ -254,7 +254,7 @@
                                 </td>
 
                                 <td class="plugincenter">
-                                    <div><small><a href="http://www.netbeans.info/uc/show_uc_content.php?ucurl=http://bits.netbeans.org/VisualVM/uc/release10/updates.xml">http://visualvm.java.net/uc/release10/updates.xml.gz</a></small></div>
+                                    <div><small><a href="http://services.netbeans.org/uc/show_uc_content.php?ucurl=http://bits.netbeans.org/VisualVM/uc/release10/updates.xml">http://visualvm.java.net/uc/release10/updates.xml.gz</a></small></div>
                                 </td>
                             </tr>
 
@@ -275,7 +275,7 @@
                                 </td>
 
                                 <td class="plugincenter">
-                                    <div><small><a href="http://www.netbeans.info/uc/show_uc_content.php?ucurl=http://bits.netbeans.org/VisualVM/uc/8u40/updates.xml">http://visualvm.java.net/uc/8u40/updates.xml.gz</a></small></div>
+                                    <div><small><a href="http://services.netbeans.org/uc/show_uc_content.php?ucurl=http://bits.netbeans.org/VisualVM/uc/8u40/updates.xml">http://visualvm.java.net/uc/8u40/updates.xml.gz</a></small></div>
                                 </td>
                             </tr>
 
@@ -285,7 +285,7 @@
                                 </td>
 
                                 <td class="plugincenter">
-                                    <div><small><a href="http://www.netbeans.info/uc/show_uc_content.php?ucurl=http://bits.netbeans.org/VisualVM/uc/8u20/updates.xml">http://visualvm.java.net/uc/8u20/updates.xml.gz</a></small></div>
+                                    <div><small><a href="http://services.netbeans.org/uc/show_uc_content.php?ucurl=http://bits.netbeans.org/VisualVM/uc/8u20/updates.xml">http://visualvm.java.net/uc/8u20/updates.xml.gz</a></small></div>
                                 </td>
                             </tr>
 
@@ -299,7 +299,7 @@
                                 </td>
 
                                 <td class="plugincenter">
-                                    <div><small><a href="http://www.netbeans.info/uc/show_uc_content.php?ucurl=http://bits.netbeans.org/VisualVM/uc/7u60/updates.xml">http://visualvm.java.net/uc/7u60/updates.xml.gz</a></small></div>
+                                    <div><small><a href="http://services.netbeans.org/uc/show_uc_content.php?ucurl=http://bits.netbeans.org/VisualVM/uc/7u60/updates.xml">http://visualvm.java.net/uc/7u60/updates.xml.gz</a></small></div>
                                 </td>
                             </tr>
 
@@ -309,7 +309,7 @@
                                 </td>
 
                                 <td class="plugincenter">
-                                    <div><small><a href="http://www.netbeans.info/uc/show_uc_content.php?ucurl=http://bits.netbeans.org/VisualVM/uc/7u14/updates.xml">http://visualvm.java.net/uc/7u14/updates.xml.gz</a></small></div>
+                                    <div><small><a href="http://services.netbeans.org/uc/show_uc_content.php?ucurl=http://bits.netbeans.org/VisualVM/uc/7u14/updates.xml">http://visualvm.java.net/uc/7u14/updates.xml.gz</a></small></div>
                                 </td>
                             </tr>
 
@@ -319,7 +319,7 @@
                                 </td>
 
                                 <td class="plugincenter">
-                                    <div><small><a href="http://www.netbeans.info/uc/show_uc_content.php?ucurl=http://bits.netbeans.org/VisualVM/uc/7u6/updates.xml">http://visualvm.java.net/uc/7u6/updates.xml.gz</a></small></div>
+                                    <div><small><a href="http://services.netbeans.org/uc/show_uc_content.php?ucurl=http://bits.netbeans.org/VisualVM/uc/7u6/updates.xml">http://visualvm.java.net/uc/7u6/updates.xml.gz</a></small></div>
                                 </td>
                             </tr>
 
@@ -333,7 +333,7 @@
                                 </td>
 
                                 <td class="plugincenter">
-                                    <div><small><a href="http://www.netbeans.info/uc/show_uc_content.php?ucurl=http://bits.netbeans.org/VisualVM/uc/7/updates.xml">http://visualvm.java.net/uc/7/updates.xml.gz</a></small></div>
+                                    <div><small><a href="http://services.netbeans.org/uc/show_uc_content.php?ucurl=http://bits.netbeans.org/VisualVM/uc/7/updates.xml">http://visualvm.java.net/uc/7/updates.xml.gz</a></small></div>
                                 </td>
                             </tr>
 
@@ -343,7 +343,7 @@
                                 </td>
 
                                 <td class="plugincenter">
-                                    <div><small><a href="http://www.netbeans.info/uc/show_uc_content.php?ucurl=http://bits.netbeans.org/VisualVM/uc/6u23/updates.xml">http://visualvm.java.net/uc/6u23/updates.xml.gz</a></small></div>
+                                    <div><small><a href="http://services.netbeans.org/uc/show_uc_content.php?ucurl=http://bits.netbeans.org/VisualVM/uc/6u23/updates.xml">http://visualvm.java.net/uc/6u23/updates.xml.gz</a></small></div>
                                 </td>
                             </tr>
 
@@ -353,7 +353,7 @@
                                 </td>
 
                                 <td class="plugincenter">
-                                    <div><small><a href="http://www.netbeans.info/uc/show_uc_content.php?ucurl=http://bits.netbeans.org/VisualVM/uc/6u20/updates.xml">http://visualvm.java.net/uc/6u20/updates.xml.gz</a></small></div>
+                                    <div><small><a href="http://services.netbeans.org/uc/show_uc_content.php?ucurl=http://bits.netbeans.org/VisualVM/uc/6u20/updates.xml">http://visualvm.java.net/uc/6u20/updates.xml.gz</a></small></div>
                                 </td>
                             </tr>
 
@@ -363,7 +363,7 @@
                                 </td>
 
                                 <td class="plugincenter">
-                                    <div><small><a href="http://www.netbeans.info/uc/show_uc_content.php?ucurl=http://bits.netbeans.org/VisualVM/uc/6u18/updates.xml">http://visualvm.java.net/uc/6u18/updates.xml.gz</a></small></div>
+                                    <div><small><a href="http://services.netbeans.org/uc/show_uc_content.php?ucurl=http://bits.netbeans.org/VisualVM/uc/6u18/updates.xml">http://visualvm.java.net/uc/6u18/updates.xml.gz</a></small></div>
                                 </td>
                             </tr>
 
@@ -373,7 +373,7 @@
                                 </td>
 
                                 <td class="plugincenter">
-                                    <div><small><a href="http://www.netbeans.info/uc/show_uc_content.php?ucurl=http://bits.netbeans.org/VisualVM/uc/6u14/updates.xml">http://visualvm.java.net/uc/6u14/updates.xml.gz</a></small></div>
+                                    <div><small><a href="http://services.netbeans.org/uc/show_uc_content.php?ucurl=http://bits.netbeans.org/VisualVM/uc/6u14/updates.xml">http://visualvm.java.net/uc/6u14/updates.xml.gz</a></small></div>
                                 </td>
                             </tr>
 
@@ -383,7 +383,7 @@
                                 </td>
 
                                 <td class="plugincenter">
-                                    <div><small><a href="http://www.netbeans.info/uc/show_uc_content.php?ucurl=http://bits.netbeans.org/VisualVM/uc/6u11/updates.xml">http://visualvm.java.net/uc/6u11/updates.xml.gz</a></small></div>
+                                    <div><small><a href="http://services.netbeans.org/uc/show_uc_content.php?ucurl=http://bits.netbeans.org/VisualVM/uc/6u11/updates.xml">http://visualvm.java.net/uc/6u11/updates.xml.gz</a></small></div>
                                 </td>
                             </tr>
 
@@ -393,7 +393,7 @@
                                 </td>
 
                                 <td class="plugincenter">
-                                    <div><small><a href="http://www.netbeans.info/uc/show_uc_content.php?ucurl=http://bits.netbeans.org/VisualVM/uc/6u7/updates.xml">http://visualvm.java.net/uc/6u7/updates.xml.gz</a></small></div>
+                                    <div><small><a href="http://services.netbeans.org/uc/show_uc_content.php?ucurl=http://bits.netbeans.org/VisualVM/uc/6u7/updates.xml">http://visualvm.java.net/uc/6u7/updates.xml.gz</a></small></div>
                                 </td>
                             </tr>
 
